# ezvz

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: Animation.h  AnimationInfo.h  AnimationPath.h  AnimationPoint.h  AudioEngine.h  AudioFeatureAnalyzer.h  Canvas.h  Ellipse.h  FileDialogHelper.h  GlobalTransport.h  GraphicObject.h  ImGuiFileDialogConfig.h  Line.h  Mapping.h  MappingsWindow.h  Menu.h  Rectangle.h  Scene.h  ScenesPanel.h  Shader.h  Star.h  Style.h  Timeline.h  TimelineTrack.h  TrackFeatures.h  Triangle.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: Animation.cpp  AnimationInfo.cpp  AnimationPath.cpp  AudioEngine.cpp  Canvas.cpp  Ellipse.cpp  FileDialogHelper.cpp  GlobalTransport.cpp  GraphicObject.cpp  Line.cpp  MappingsWindow.cpp  Rectangle.cpp  ScenesPanel.cpp  Shader.cpp  Star.cpp  Timeline.cpp  TimelineTrack.cpp  TrackFeatures.cpp  Triangle.cpp  main.cpp
